# ZenTheory

./: CMakeLists.txt  DataCard.cpp  DataCard.h  DataStruct.h  Divergence.cpp  Divergence.h  EMA.cpp  EMA.h  EncodeTransform.cpp  EncodeTransform.h  KlineGenerate.cpp  KlineGenerate.h  LineSegment.cpp  LineSegment.h  MACD.h  MarketData.cpp  MarketData.h  Merge.h  NoticeHandle.cpp  NoticeHandle.h  QuotationHandle.cpp  QuotationHandle.h  README.md  Stroke.cpp  Stroke.h  ThostFtdcHandle.cpp  ThostFtdcHandle.h  Trade.cpp  Trade.h  TrendCentralAndType.cpp  TrendCentralAndType.h  Typing.h  Utils.cpp  Utils.h  ZenSchedule.cpp  ZenSchedule.h  ZenTheory.cpp  ZenTheory.h  ZenTheory.sln  ZenTheory.vcxproj  (+22 more)
flow_md/: TradingDay.con
